Removed definition of factor_coord

--- a/vignettes/new-ord-classes.Rmd
+++ b/vignettes/new-ord-classes.Rmd
@@ -70,11 +70,10 @@ Now that we have discussed the decompositions that serve as foundation for PCA (
 7. `ordr::recover_coord()`, which should return the coordinate names of our ordination object.
 8. `ordr::recover_aug_rows()` and (9) `ordr::recover_aug_cols()`, which do not recover raw elements of the PCA but rather reassemble previously recovered elements for the function `ordr::augment_ord()`.
 
-While these recovery methods will be defined based on the GDA technique and theory at hand, we define the function `as_tbl_ord()` uniformly as the below helper function from **ordr** defined to reduce redundancy and expedite debugging. Similarly, we define `factor_coord()` to be used in our later recoverers.
+While these recovery methods will be defined based on the GDA technique and theory at hand, we define the function `as_tbl_ord()` uniformly as the below helper function from **ordr** defined to reduce redundancy and expedite debugging.
 
 ```{r}
 as_tbl_ord.principal <- getFromNamespace("as_tbl_ord_default", "ordr")
-factor_coord <- getFromNamespace("factor_coord", "ordr")
 ```
 
 These recoverers are all necessary to produce a `tbl_ord`, illustrated below with the pre-loaded set of Anderson's Iris data.
